fix: fixing layout issues

--- a/src/app/features/order/components/order-table/order-table.scss
+++ b/src/app/features/order/components/order-table/order-table.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 12px;
   margin-top: 10px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .order-grid {
@@ -53,17 +53,17 @@
     gap: 4px;
     padding: 10px;
     width: 100%;
-    border: 1px solid #dc3545; 
+    border: 1px solid #dc3545;
     border-radius: 6px;
-    background-color: transparent; 
+    background-color: transparent;
     color: #dc3545;
     cursor: pointer;
     font-size: 14px;
     transition: transform 0.2s, background-color 0.2s, color 0.2s;
 
     &:hover {
-      background-color: rgba(220, 53, 69, 0.1); 
-      color: #b71c1c; 
+      background-color: rgba(220, 53, 69, 0.1);
+      color: #b71c1c;
     }
 
     .material-icons {
@@ -81,6 +81,7 @@
 
 @media (max-width: 900px) {
   .order-grid {
+    padding-bottom: 150px;
     grid-template-columns: 1fr;
   }
 
@@ -93,7 +94,7 @@
   }
 
   input {
-    width: 100%; 
+    width: 100%;
   }
 
   .order-grid.header {
@@ -101,14 +102,16 @@
   }
 
   .cell {
-  flex-direction: unset;
-}
-
-.actions {
-
-  .delete-btn {
-    width: unset;
+    flex-direction: unset;
   }
-}
 
+  .actions {
+    .delete-btn {
+      width: unset;
+    }
+  }
+
+  .actions-row {
+    margin-bottom: 52px;
+  }
 }
